# Multi-agents-Assistant-System-MAAS-

./: .env.example  .gitignore  Project 0: Multi-agent assistant system.md  README.md  pyproject.toml
data/: user_profile.example.yaml
prompts/: intelligence.md  intelligence.toml  learning.md  learning.toml  manager.md  manager.toml  secretary.md  secretary.toml  secretary_free.md  secretary_free.toml  supervisor.md  supervisor.toml
scripts/: calendar_smoke.py  dev_web.sh  diagnose_chat_leakage.py  inject_reminder.py  smoke_control_panel.sh  smoke_generate_report.py  smoke_memory.sh  smoke_web.sh
src/project0/: config.py  envelope.py  errors.py  main.py  mentions.py  orchestrator.py  pulse.py  store.py  telegram_io.py
tests/: conftest.py  test_agents.py  test_cache_layout_invariant.py  test_call_site_labels.py  test_config.py  test_config_cache_ttl.py  test_config_calendar.py  test_config_secretary_mode.py  test_cross_agent_fact_visibility.py  test_end_to_end.py  test_envelope.py  test_envelope_pulse.py  test_google_calendar.py  test_intelligence_get_report_item.py  test_intelligence_slim_report.py  test_knowledge_store.py  test_learning_agent.py  test_llm_provider.py  test_llm_usage_store.py  test_llm_usage_store_exclude.py  test_local_provider.py  test_main_sigterm.py  test_manager_system_blocks.py  test_mentions.py  test_messages_store_visibility.py  test_notion_client.py  test_notion_model.py  test_orchestrator.py  test_orchestrator_listener_fanout.py  test_provider_system_blocks.py  test_provider_usage_recording.py  test_reviews_page.py  test_reviews_rendering.py  test_schema_immutability.py  test_secretary.py  test_secretary_local_integration.py  test_secretary_mode_factory.py  test_secretary_system_blocks.py  test_secretary_tool_loop.py  test_secretary_typing.py  (+10 more)
tests/agents/: test_intelligence_class.py  test_intelligence_config_load.py  test_intelligence_persona_load.py  test_intelligence_tool_dispatch.py  test_manager_persona_load.py  test_manager_tool_dispatch.py  test_manager_tool_loop.py  test_register_intelligence.py  test_register_manager.py  test_tool_loop_shared.py
tests/control_panel/: conftest.py  test_atomic_write.py  test_home.py  (+10 more)
(+109 files in other folders)
